// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText props should render type 'background' 1`] = `
<input
  class="input-text box-border inline-block resize-none p-1 border border-solid rounded-sm h-8"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #2b8ac6;"
/>
`;

exports[`InputText props should render type 'block' 1`] = `
<input
  class="input-text box-border inline-block resize-none p-1 border border-solid rounded-sm h-8 w-full block"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #2b8ac6;"
/>
`;

exports[`InputText props should render type 'borderColor' 1`] = `
<input
  class="input-text box-border inline-block resize-none p-1 border border-solid rounded-sm h-8"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #fff;"
/>
`;

exports[`InputText props should render type 'color' 1`] = `
<input
  class="input-text box-border inline-block resize-none p-1 border border-solid rounded-sm h-8"
  style="color: rgb(255, 255, 255); background: rgb(255, 255, 255); border-color: #2b8ac6;"
/>
`;

exports[`InputText props should render type 'disabled' 1`] = `
<input
  class="input-text box-border inline-block resize-none p-1 border border-solid rounded-sm h-8"
  disabled=""
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #2b8ac6;"
/>
`;

exports[`InputText props should render type 'value' 1`] = `
<input
  class="input-text box-border inline-block resize-none p-1 border border-solid rounded-sm h-8"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #2b8ac6;"
/>
`;

exports[`InputText props should render without props 1`] = `
<input
  class="input-text box-border inline-block resize-none p-1 border border-solid rounded-sm h-8"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #2b8ac6;"
/>
`;
